<resources>
    <string name="app_name">SaludoPersonalizado_v3</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintFecha">Fecha</string>
    <string name="rdbSr">Sr.</string>
    <string name="rdbSra">Sra.</string>
    <string name="btnSaludar">Saludar</string>
    <string name="chkSaludo">¿Deseas saludar?</string>
    <string name="btnFinalizar">FINALIZAR</string>
</resources>