<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >
    <EditText
        android:id="@+id/editTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintNombre"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hintFecha"/>
    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/rdbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/rdbSr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbSr"/>
        <RadioButton
            android:id="@+id/rdbSra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbSra"/>

    </RadioGroup>
    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFinalizar"/>



</LinearLayout>